[project]
name = "cf_clearance"
version = "0.29.1"
description = "Purpose To make a cloudflare v2 challenge pass successfully, Can be use cf_clearance bypassed by cloudflare, However, with the cf_clearance, make sure you use the same IP and UA as when you got it."
authors = [
    {name = "vvanglro", email = "vvanglro@gmail.com"},
]
dependencies = [
    "playwright>=1.34.0",
]
requires-python = ">=3.7,<4"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/vvanglro/cf_clearance"
Repository = "https://github.com/vvanglro/cf_clearance"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.21.0",
]

[tool.ruff]
line-length = 120
